# challenge-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: challenge_cpp_version.h.in
source/: CMakeLists.txt
source/find_unique_interval/: CMakeLists.txt  find_unique_interval.cpp  find_unique_interval.h
source/find_unique_interval/cmake/: find_unique_interval-config.cmake
source/find_unique_interval/tests/: CMakeLists.txt  test.cpp
source/find_unique_interval_app/: CMakeLists.txt  main.cpp
